--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 <div class="menu-in">
 <ul>
     <a href="about.html"><li>about</li></a>
-    <a href="#"><li>portfolio</li></a>
-    <a href="#"><li>contact</li></a>
+    <a href="about.html"><li>portfolio</li></a>
+    <a href="about.html"><li>contact</li></a>
 </ul>
 </div>
 </section>
 
 
-<script src="js/js.js"></script>
 </body>
 </html>
